# vulkan-rust

./: Cargo.toml  README.md  cargo.txt  cubes.gltf
assets/models/: cube.gltf
assets/models/Map/: scene.gltf
assets/shaders/: a.spv  composition.frag  deffered.frag  pbr.frag  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: main.rs
src/first_app/: keyboard_movement_controller.rs  lve_buffer.rs  lve_descriptor_set.rs  lve_device.rs  lve_frame_info.rs  lve_game_object.rs  lve_model.rs  lve_pipeline.rs  lve_renderer.rs  mod.rs  point_render_system.rs  simple_render_system.rs
src/first_app/ecs/: entity.rs  mesh.rs  mod.rs  model.rs  scene.rs
src/first_app/systems/: advanced_render_system.rs  composition_render_system.rs  deffered_rendering_system.rs  mod.rs  point_render_system.rs  simple_render_system.rs
src/first_app/vulkan/: lve_buffer.rs  lve_descriptor_set.rs  lve_device.rs  lve_frame_info.rs  lve_game_object.rs  lve_image.rs  lve_model.rs  lve_pipeline.rs  lve_renderer.rs  lve_swapchain.rs  mod.rs
