[package]
name = "little_vulkan_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.8.4"
ash = "0.33.3+1.2.191"
ash-window = "0.7.0"
winit = "0.25.*"
winit_input_helper = "0.10.0"
nalgebra = "0.29.0"
time = "0.3.5"
tobj = "3.2.0"
shaderc = "0.7.4"
memoffset = "0.6.5"
image = "0.24.0"