[package]
name = "little_vulkan_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
ash = { version= "0.35.1+1.2.203", default-features = false, features = ["linked", "debug"] }
ash-window = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.11.0"
nalgebra = "0.30.1"
time = "0.3.5"
tobj = "3.2.0"
shaderc = "0.7.4"
memoffset = "0.6.5"
image = "0.24.0"
imgui-rs-vulkan-renderer = "1.1.1"