[package]
name = "little_vulkan_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
ash = { version= "0.36.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.9.1"
winit = "0.26.1"
winit_input_helper = "0.11.1"
nalgebra = "0.30.1"
time = "0.3.7"
tobj = "3.2.0"
shaderc = "0.7.4"
memoffset = "0.6.5"
image = "0.24.1"
imgui = { version = "0.8.2", features = ["tables-api"] }
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
imgui-rs-vulkan-renderer = "1.2.0"
gltf = "1.0.0"
rayon = "1.5.1"
glam = "0.20.2"